# yesod-compiler

./: .clang-format  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  README.md  plan.md  test.cpp
.github/: copilot-instructions.md
.github/instructions/: compiler-test.instructions.md
.github/prompts/: ast-ir-data-structures.prompt.md  frontend-sync-from-peg.prompt.md  peg.prompt.md
benchmark/: BENCHMARK_REPORT.md  run_benchmark.py
benchmark/baseline/: poly_div.cpp  poly_exp_dc.cpp  poly_exp_newton.cpp
benchmark/std/: poly_div.cpp  poly_exp_dc.cpp  poly_exp_newton.cpp
doc/: koopaIR.md  poly.md  riscv.md  sysy-lib.md  sysy-peg.md  sysy.md
scripts/: array_stress.py  function_stress.py
src/: main.cpp  utils.h
src/backend/: llvm.cpp  llvm.h  llvm_poly_runtime.h  riscv.cpp  riscv.h
src/frontend/: arena.h  ast.cpp  ast.h  diagnostic.h  parser.cpp  parser.h  semantic.cpp  semantic.h  semantic_ast.h  semantic_cfg.cpp  semantic_cfg.h  semantic_cfg_impl.h  semantic_loop.cpp  semantic_loop.h  semantic_loop_impl.h  semantic_ssa.cpp  semantic_ssa.h  semantic_symbol.cpp  semantic_symbol.h  semantic_symbol_impl.h  semantic_type.cpp  semantic_type.h  semantic_type_impl.h
src/koopa/: ast_to_koopa.cpp  ast_to_koopa.h  cse.cpp  cse.h  ir.cpp  ir.h  mykoopa.cpp  mykoopa.h
test/: CMakeLists.txt  backend_riscv_test.cpp  compiler_llvm_test.cpp  interpreter_runner.cpp  interpreter_runner.h  koopa_array_test.cpp  koopa_basic_test.cpp  koopa_binary_test.cpp  koopa_decl_test.cpp  koopa_function_test.cpp  koopa_generator_test.cpp  koopa_if_test.cpp  koopa_mint_test.cpp  koopa_ssa_test.cpp  koopa_test_support.h  koopa_unary_test.cpp  koopa_while_test.cpp  parser_array_test.cpp  parser_assign_test.cpp  parser_basic_test.cpp  parser_binary_test.cpp  parser_decl_test.cpp  parser_function_test.cpp  parser_if_test.cpp  parser_mint_test.cpp  parser_stmt_test.cpp  parser_test.cpp  parser_test_support.h  parser_unary_test.cpp  parser_while_test.cpp  poly_stress_test.cpp  semantic_array_test.cpp  semantic_const_fold_test.cpp  semantic_function_test.cpp  semantic_if_test.cpp  semantic_mint_test.cpp  semantic_symbol_test.cpp  semantic_test_support.h  semantic_while_test.cpp  test_support.h
test/koopa/: koopa_array_test.cpp  koopa_basic_test.cpp  koopa_binary_test.cpp  koopa_decl_test.cpp  koopa_extra_test.cpp  koopa_function_test.cpp  koopa_if_test.cpp  koopa_interpreter.cpp  koopa_interpreter.h  koopa_ir_validation_test.cpp  koopa_mint_test.cpp  koopa_poly_test.cpp  koopa_simplify_assert.h  koopa_test_support.h  koopa_while_test.cpp
test/llvm/: allocator.sy  mint_example.sy  ntt.sy  simple_put.sy
test/parser/: parser_basic_test.cpp  parser_binary_test.cpp  parser_poly_test.cpp  parser_test_support.h  parser_unary_test.cpp
test/poly/: poly_base_extra_test.cpp  poly_extra_test.cpp  poly_interpreter.cpp  poly_interpreter.h  poly_prelude.h  poly_runtime.cpp  poly_runtime.h  poly_test_driver.cpp  poly_test_driver.h
test/semantic/: semantic_const_fold_test.cpp  semantic_function_test.cpp  semantic_if_test.cpp  semantic_mint_test.cpp  semantic_ssa_test.cpp  semantic_symbol_test.cpp  semantic_while_test.cpp
test/testsuit-collection/: README.md
test/testsuit-collection/poly/: poly_add_sub_lengths.c  poly_add_sub_lengths.out  poly_coeff_bounds.c  poly_coeff_bounds.out  poly_construct_bounds.c  poly_construct_bounds.out  poly_cyclic_convolution_bounds.c  poly_cyclic_convolution_bounds.out  poly_div.c  poly_div.out  poly_div_large.in  poly_div_large.out  poly_exp_dc.c  poly_exp_dc.out  poly_exp_dc_large.out  poly_exp_newton.c  poly_exp_newton_large.in  poly_function_array_smoke.c  poly_function_array_smoke.out  poly_global_alias_copy.c  poly_global_alias_copy.out  poly_global_array_function_param.c  poly_global_array_function_param.out  poly_global_array_load_store.c  poly_global_array_load_store.out  poly_global_mixed_mint.c  poly_global_mixed_mint.out  poly_global_scalar_load_store.c  poly_global_scalar_load_store.out  poly_interval_empty_bounds.c  poly_interval_empty_bounds.out  poly_inv.c  poly_inv.out  poly_inv_large.in  poly_inv_large.out  poly_ln.c  poly_ln.out  poly_ln_large.in  poly_ln_large.out  poly_mul_bounds.c  (+11 more)
